--- a/src/pages/LevelUp.module.css
+++ b/src/pages/LevelUp.module.css
@@ -34,6 +34,7 @@
 
         box-sizing: border-box;
         span {
+          white-space: nowrap;
           &:nth-of-type(1) {
             /* 自动布局子元素 */
             opacity: 1;
