--- a/src/style/react-data-table-component-cover-m.css
+++ b/src/style/react-data-table-component-cover-m.css
@@ -2,6 +2,9 @@
   width: 100vw !important;
   background-color: transparent !important;
   padding: 0 14px;
+  > div {
+    background-color: transparent !important;
+  }
 
   .rdt_TableHead {
     .rdt_TableHeadRow {
