--- a/src/style/ant-cover-m.css
+++ b/src/style/ant-cover-m.css
@@ -294,3 +294,21 @@
     }
   }
 }
+
+/* adm-pull-to-refresh  */
+.adm-pull-to-refresh {
+  .adm-pull-to-refresh-head-content {
+    /* 自动布局子元素 */
+    font-family: Space Grotesk;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0em;
+
+    font-variation-settings: "opsz" auto;
+    font-feature-settings: "kern" on;
+    color: #9e9e9e;
+
+    z-index: 0;
+  }
+}
