--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -685,7 +685,8 @@
 
       margin-top: 10px;
       > span {
-        &:nth-of-type(1) {
+        &:nth-of-type(1),
+        &:nth-of-type(3) {
           /* 自动布局子元素 */
           opacity: 0.8;
 
@@ -700,6 +701,9 @@
           color: #ffffff;
 
           z-index: 0;
+        }
+        &:nth-of-type(3) {
+          margin-top: 20px;
         }
 
         &:nth-of-type(2) {
@@ -746,11 +750,38 @@
           gap: 16px;
 
           white-space: nowrap;
+        }
+      }
+      .superior_content_link {
+        display: flex;
+        align-items: center;
+        gap: 10px;
 
-          .invite_content_icon {
-            width: 24px;
-            height: 24px;
-          }
+        > span {
+          /* 自动布局子元素 */
+          opacity: 1;
+
+          font-family: DM Sans;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: normal;
+          letter-spacing: 0em;
+
+          font-variation-settings: "opsz" auto;
+          font-feature-settings: "kern" on;
+          color: #ffffff;
+
+          z-index: 0;
+
+          display: flex;
+          align-items: center;
+          gap: 16px;
+
+          white-space: nowrap;
+        }
+
+        .invite_content_icon {
+          margin-left: auto;
         }
       }
     }
